tests/ui/impl-trait/upvar_captures.stderr
error[E0106]: missing lifetime specifier
  --> $DIR/upvar_captures.rs:11:18
   |
LL |     pub struct C(&());
   |                  ^ expected named lifetime parameter
   |
help: consider introducing a named lifetime parameter
   |
LL |     pub struct C<'a>(&'a ());
   |                 ++++  ++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0106`.
